--- a/CarRentalSystem/Views/Cars/Index.cshtml
+++ b/CarRentalSystem/Views/Cars/Index.cshtml
@@ -10,7 +10,7 @@
 {
     <p>
 
-        @Html.ActionLink("Create New", "Create")
+        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default grey" })
     </p>
 }
 <table class="table-bordered table-striped">
@@ -44,7 +44,9 @@
             @Html.DisplayNameFor(model => model.Description)
         </th>
 
-        <th></th>
+        <th>
+            Some Actions
+        </th>
     </tr>
 
     @foreach (var item in Model)
@@ -54,16 +56,16 @@
                 @Html.DisplayFor(modelItem => item.Mark.MarkType)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Body)
+                @Html.DisplayFor(modelItem => item.Body.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Transmission)
+                @Html.DisplayFor(modelItem => item.Transmission.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Mileage)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Fuel)
+                @Html.DisplayFor(modelItem => item.Fuel.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Model)
@@ -80,13 +82,19 @@
 
 
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
-
+                @Html.ActionLink("Details", "Details", new { id = item.Id }, new { @class = "btn btn-default grey" })
                 @if (User.IsInRole("Admin"))
                 {
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default grey" }) 
+                    
                 }
+                @if (User.IsInRole("Admin"))
+                {
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default grey" })
+
+                }
+
+
 
 
             </td>
