added Account/Edit.cshtml and Account/Profile.cshtml

--- a/CarRentalSystem/Views/Account/Register.cshtml
+++ b/CarRentalSystem/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <div >
+        <div>
             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email)
@@ -17,54 +17,64 @@
             </div>
         </div>
         @**@
-        <div >
+        <div>
             @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password)
+                @Html.EditorFor(model => model.Password, new { @class = "validate" })
                 @Html.ValidationMessageFor(model => model.Password)
             </div>
         </div>
 
-        <div >
+        <div>
             @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.ConfirmPassword)
                 @Html.ValidationMessageFor(model => model.ConfirmPassword)
             </div>
         </div>
-        <div >
+        <div>
             @Html.LabelFor(model => model.FirstName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.FirstName)
                 @Html.ValidationMessageFor(model => model.FirstName)
             </div>
         </div>
-        <div >
+        <div>
             @Html.LabelFor(model => model.LastName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.LastName)
                 @Html.ValidationMessageFor(model => model.LastName)
             </div>
         </div>
-        <div >
+        <div>
             @Html.LabelFor(model => model.Skype, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Skype)
                 @Html.ValidationMessageFor(model => model.Skype)
             </div>
         </div>
-        <div >
+        <div>
             @Html.LabelFor(model => model.Telephone, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Telephone)
                 @Html.ValidationMessageFor(model => model.Telephone)
             </div>
         </div>
-
-        <div >
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Зарегистрировать" class="btn btn-default" />
+        <div>
+            @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.Gender, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.Gender, "", new { @class = "text-danger" })
             </div>
+        </div>
+
+
+        <div>
+            <p>
+                <div class="col-md-offset-2 col-md-10" style="margin-top:10px">
+                    <input type="submit" value="Зарегистрировать" class="btn btn-default grey" />
+                </div>
+            </p>
         </div>
     </div>
 }
