--- a/CarRentalSystem/Views/Shared/_Layout.cshtml
+++ b/CarRentalSystem/Views/Shared/_Layout.cshtml
@@ -4,26 +4,42 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Home</title>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <link rel='stylesheet prefetch' href="~/Content/bootstrap.css">
+
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"></script>
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 </head>
 
 <body>
-    <div class="navbar-fixed">
-        <nav>
-            <div class="nav-wrapper grey">
-                @if (User.Identity.IsAuthenticated)
-                {
-                    <a href="#!" class="brand-logo left">
-                        Hi, @User.Identity.Name
-                    </a>
-                }
-                <ul class="right hide-on-med-and-down">
+    @*
+          <div class="navbar-fixed">
+            <nav>
+                <div class="nav-wrapper grey">
+
+
+
+                    <ul class="right hide-on-med-and-down">
+                        
+                        
+                        
+
+                    </ul>
+
+                </div>
+            </nav>
+        </div>
+    *@
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+           
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
                     <li>
                         @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "active" })
                     </li>
@@ -37,59 +53,65 @@
                             @Html.ActionLink("List of Users", "Index", "Account", new { area = "" }, new { @class = "active" })
                         </li>
                     }
-                    @if (User.Identity.IsAuthenticated)
-                    {
-                        <li>
-                            @Html.ActionLink("Profile", "Register", "Account", new { area = "" }, new {@class="active" })
-                        </li>
-                        <li>
-                            @Html.ActionLink("Log out", "Logoff", "Account", new { area = "" }, new { @class="active"})
-                        </li>
-                    }
-                    else
-                    {
-                        <li>
-                            @Html.ActionLink("Register", "Register", "Account", new { area = "" }, new { @class = "active" })
-                        </li>
-                        <li>
-                            @Html.ActionLink("Login", "Login", "Account", new { area = "" }, new { @class = "active" })
-                        </li>
-                    }
-                   
+                 
+                 
                 </ul>
+                     <ul class="nav navbar-nav navbar-right">
+                         @if (User.Identity.IsAuthenticated)
+                         {
+                             <li>
+                                 @Html.ActionLink("Profile", "Profile", "Account", new { area = "" }, new { @class = "active" })
+                             </li>
+                             <li>
+                                 @Html.ActionLink("Log out", "Logoff", "Account", new { area = "" }, new { @class = "active" })
+                             </li>
+                         }
+                         else
+                         {
+                             <li>
+                                 @Html.ActionLink("Register", "Register", "Account", new { area = "" }, new { @class = "active" })
+                             </li>
+                             <li>
+                                 @Html.ActionLink("Login", "Login", "Account", new { area = "" }, new { @class = "active" })
+                             </li>
+                         }
+                     </ul>   
 
-            </div>
-        </nav>
-    </div>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
     @{
         CarRentalSystem.DAL.Models.UnitOfWork unit = new CarRentalSystem.DAL.Models.UnitOfWork();
         List<CarRentalSystem.DAL.Models.Car.Mark> marks = unit.Marks.GetAll().ToList();
-        List<CarRentalSystem.DAL.Models.Car.Body> bodies=unit.Bodies.GetAll().ToList();
+        List<CarRentalSystem.DAL.Models.Car.Body> bodies = unit.Bodies.GetAll().ToList();
     }
+    @*
 
-    <ul class="collection left" style="max-height:850px;overflow:auto">
-        @foreach (CarRentalSystem.DAL.Models.Car.Mark mark in marks)
-        {
-            <li class="collection-item avatar">
-                <img src="@mark.MarkPictrure.Path" alt="" class="circle">
-                <span class="modal-title upper">@mark.MarkType</span>
-                <a href="#!" class="secondary-content"></a>
-            </li>
-        }
-    </ul>
-    <ul class="collection right" style="max-height:700px;overflow:auto">
-        @foreach (CarRentalSystem.DAL.Models.Car.Body body in bodies)
-        {
-            <li class="collection-item avatar">
-                @if(body.BodyPictrure!=null)
-                { 
-                <img src="@body.BodyPictrure.Path" alt="" class="circle">
-                }
-                <span class="modal-title upper">@body.Name</span>
-                <a href="#!" class="secondary-content"></a>
-            </li>
-        }
-    </ul>
+
+        <ul class="collection left" style="max-height:850px;overflow:auto">
+            @foreach (CarRentalSystem.DAL.Models.Car.Mark mark in marks)
+            {
+                <li class="collection-item avatar">
+                    <img src="@mark.MarkPictrure.Path" alt="" class="circle">
+                    <span class="modal-title upper">@mark.MarkType</span>
+                    <a href="#!" class="secondary-content"></a>
+                </li>
+            }
+        </ul>
+        <ul class="collection right" style="max-height:700px;overflow:auto">
+            @foreach (CarRentalSystem.DAL.Models.Car.Body body in bodies)
+            {
+                <li class="collection-item avatar">
+                    @if(body.BodyPictrure!=null)
+                    {
+                    <img src="@body.BodyPictrure.Path" alt="" class="circle">
+                    }
+                    <span class="modal-title upper">@body.Name</span>
+                    <a href="#!" class="secondary-content"></a>
+                </li>
+            }
+        </ul>
+    *@
     <div class="container body-content">
         @RenderBody()
         <hr />
