--- a/CarRentalSystem/Views/Account/Index.cshtml
+++ b/CarRentalSystem/Views/Account/Index.cshtml
@@ -4,18 +4,18 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Car List</h2>
+<h2>List of users</h2>
 
 @if (User.IsInRole("Admin"))
 {
 
     <div style="margin-bottom:20px">
 
-        @Html.ActionLink("Create new", "Create", null, new { @class = "btn btn-default grey" })
+        @Html.ActionLink("Create new", "Create", null, new { @class = "btn btn-default " })
     </div>
 
 }
-<table class="table-bordered table-striped text-center">
+<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Email)
@@ -74,13 +74,10 @@
                 @Html.DisplayFor(modelItem => item.Password)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.Id })
-                @if (User.IsInRole("Admin"))
-                {
-                    @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+             
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }, new { @class = "btn btn-default " })
                     <a> </a>
-                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                }
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id }, new { @class = "btn btn-default " })
             </td>
         </tr>
     }
