--- a/CarRentalSystem/Views/Account/Register.cshtml
+++ b/CarRentalSystem/Views/Account/Register.cshtml
@@ -9,58 +9,58 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Email, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Email)
+                @Html.TextBoxFor(model => model.Email,  new { @class = "form-control " })
                 @Html.ValidationMessageFor(model => model.Email)
             </div>
         </div>
         @**@
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Password, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Password, new { @class = "validate" })
+                @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Password)
             </div>
         </div>
 
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.ConfirmPassword, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.ConfirmPassword)
+                @Html.PasswordFor(model => model.ConfirmPassword, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword)
             </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.FirstName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.FirstName)
+                @Html.TextBoxFor(model => model.FirstName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.FirstName)
             </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.LastName, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.LastName)
+                @Html.TextBoxFor(model => model.LastName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.LastName)
             </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Skype, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Skype)
+                @Html.TextBoxFor(model => model.Skype, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Skype)
             </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Telephone, new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Telephone)
+                @Html.TextBoxFor(model => model.Telephone, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.Telephone)
             </div>
         </div>
-        <div>
+        <div class="form-group">
             @Html.LabelFor(model => model.Gender, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EnumDropDownListFor(model => model.Gender, htmlAttributes: new { @class = "form-control" })
