--- a/CarRentalSystem/Views/Cars/Index.cshtml
+++ b/CarRentalSystem/Views/Cars/Index.cshtml
@@ -10,10 +10,10 @@
 {
     <p>
 
-        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default grey" })
+        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-default" })
     </p>
 }
-<table class="table-bordered table-striped">
+<table class="table table-bordered table-hover">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Mark)
