--- a/CarRentalSystem/Views/Cars/Edit.cshtml
+++ b/CarRentalSystem/Views/Cars/Edit.cshtml
@@ -29,24 +29,23 @@
         <div>
             @Html.LabelFor(model => model.Transmission, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Transmission, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Transmission, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.IdTransmission, ViewBag.Transmissions as SelectList, htmlAttributes: new { @class = "form-control " })
+
+
             </div>
         </div>
 
         <div>
             @Html.LabelFor(model => model.Fuel, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Fuel, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Fuel, "", new { @class = "text-danger" })
+                @Html.DropDownListFor(model => model.IdFuel, ViewBag.Fuels as SelectList, htmlAttributes: new { @class = "form-control " })
             </div>
         </div>
         <div>
             @Html.LabelFor(model => model.Body, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.Body, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Body, "", new { @class = "text-danger" })
-            </div>
+                @Html.DropDownListFor(model => model.IdBody, ViewBag.Bodies as SelectList, htmlAttributes: new { @class = "form-control " })
+             </div>
         </div>
         <div>
             @Html.LabelFor(model => model.Mileage, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -80,13 +79,7 @@
                 @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div>
-            @Html.LabelFor(model => model.Mileage, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Mileage, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Mileage, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        
 
         <div >
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
